exports[`no-useless-delete-check > invalid(1): const object = {}; if (key in object) { delete object[key]; } 1`] = `

  1 | const object = {}; if (key in object) { delete object[key]; }

`;

exports[`no-useless-delete-check > invalid(1): const object = {}; if (key in object) { delete object[key]; } 2`] = `

Message:
> 1 | const object = {}; if (key in object) { delete object[key]; }
    |                        ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object[key];

`;

exports[`no-useless-delete-check > invalid(10): const object = {}; if ((key) in (object)) { delete (object)[(key)]; } 1`] = `

  1 | const object = {}; if ((key) in (object)) { delete (object)[(key)]; }

`;

exports[`no-useless-delete-check > invalid(10): const object = {}; if ((key) in (object)) { delete (object)[(key)]; } 2`] = `

Message:
> 1 | const object = {}; if ((key) in (object)) { delete (object)[(key)]; }
    |                        ^^^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete (object)[(key)];

`;

exports[`no-useless-delete-check > invalid(11): const object = []; if (key in object) { delete object[key]; } 1`] = `

  1 | const object = []; if (key in object) { delete object[key]; }

`;

exports[`no-useless-delete-check > invalid(11): const object = []; if (key in object) { delete object[key]; } 2`] = `

Message:
> 1 | const object = []; if (key in object) { delete object[key]; }
    |                        ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = []; delete object[key];

`;

exports[`no-useless-delete-check > invalid(12): const object = /regexp/; if (\"source\" in object) { delete object.source; } 1`] = `

  1 | const object = /regexp/; if ("source" in object) { delete object.source; }

`;

exports[`no-useless-delete-check > invalid(12): const object = /regexp/; if (\"source\" in object) { delete object.source; } 2`] = `

Message:
> 1 | const object = /regexp/; if ("source" in object) { delete object.source; }
    |                              ^^^^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = /regexp/; delete object.source;

`;

exports[`no-useless-delete-check > invalid(13): const object = () => {}; if (\"key\" in object) { delete object.key; } 1`] = `

  1 | const object = () => {}; if ("key" in object) { delete object.key; }

`;

exports[`no-useless-delete-check > invalid(13): const object = () => {}; if (\"key\" in object) { delete object.key; } 2`] = `

Message:
> 1 | const object = () => {}; if ("key" in object) { delete object.key; }
    |                              ^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = () => {}; delete object.key;

`;

exports[`no-useless-delete-check > invalid(14): const object = function () {}; if (\"key\" in object) { delete object.key; } 1`] = `

  1 | const object = function () {}; if ("key" in object) { delete object.key; }

`;

exports[`no-useless-delete-check > invalid(14): const object = function () {}; if (\"key\" in object) { delete object.key; } 2`] = `

Message:
> 1 | const object = function () {}; if ("key" in object) { delete object.key; }
    |                                    ^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = function () {}; delete object.key;

`;

exports[`no-useless-delete-check > invalid(15): const object = class {}; if (\"key\" in object) { delete object.key; } 1`] = `

  1 | const object = class {}; if ("key" in object) { delete object.key; }

`;

exports[`no-useless-delete-check > invalid(15): const object = class {}; if (\"key\" in object) { delete object.key; } 2`] = `

Message:
> 1 | const object = class {}; if ("key" in object) { delete object.key; }
    |                              ^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = class {}; delete object.key;

`;

exports[`no-useless-delete-check > invalid(16): const object = {};\nif (key in object) {\n\tdelete object[key];\n} 1`] = `

  1 | const object = {};
  2 | if (key in object) {
  3 | 	delete object[key];
  4 | }

`;

exports[`no-useless-delete-check > invalid(16): const object = {};\nif (key in object) {\n\tdelete object[key];\n} 2`] = `

Message:
  1 | const object = {};
> 2 | if (key in object) {
    |     ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.
  3 | 	delete object[key];
  4 | }

Suggestion 1/1: Remove the existence check.:
  1 | const object = {};
  2 | delete object[key];

`;

exports[`no-useless-delete-check > invalid(17): const object = {};\nif (key in object) {\n\t// Keep this comment.\n\tdelete object[key];\n} 1`] = `

  1 | const object = {};
  2 | if (key in object) {
  3 | 	// Keep this comment.
  4 | 	delete object[key];
  5 | }

`;

exports[`no-useless-delete-check > invalid(17): const object = {};\nif (key in object) {\n\t// Keep this comment.\n\tdelete object[key];\n} 2`] = `

Message:
  1 | const object = {};
> 2 | if (key in object) {
    |     ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.
  3 | 	// Keep this comment.
  4 | 	delete object[key];
  5 | }

`;

exports[`no-useless-delete-check > invalid(18): const object = {}; if (/* comment */ key in object) { delete object[key]; } 1`] = `

  1 | const object = {}; if (/* comment */ key in object) { delete object[key]; }

`;

exports[`no-useless-delete-check > invalid(18): const object = {}; if (/* comment */ key in object) { delete object[key]; } 2`] = `

Message:
> 1 | const object = {}; if (/* comment */ key in object) { delete object[key]; }
    |                                      ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

`;

exports[`no-useless-delete-check > invalid(19): function f(object: object, key: string) { if (key in object) { delete object[key]; } } 1`] = `

  1 | function f(object: object, key: string) { if (key in object) { delete object[key]; } }

`;

exports[`no-useless-delete-check > invalid(19): function f(object: object, key: string) { if (key in object) { delete object[key]; } } 2`] = `

Message:
> 1 | function f(object: object, key: string) { if (key in object) { delete object[key]; } }
    |                                               ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | function f(object: object, key: string) { delete object[key]; }

`;

exports[`no-useless-delete-check > invalid(2): const object = {}; if (key in object) delete object[key]; 1`] = `

  1 | const object = {}; if (key in object) delete object[key];

`;

exports[`no-useless-delete-check > invalid(2): const object = {}; if (key in object) delete object[key]; 2`] = `

Message:
> 1 | const object = {}; if (key in object) delete object[key];
    |                        ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object[key];

`;

exports[`no-useless-delete-check > invalid(20): function f(object: object, key: string) { if (key in object!) { delete object![key]; } } 1`] = `

  1 | function f(object: object, key: string) { if (key in object!) { delete object![key]; } }

`;

exports[`no-useless-delete-check > invalid(20): function f(object: object, key: string) { if (key in object!) { delete object![key]; } } 2`] = `

Message:
> 1 | function f(object: object, key: string) { if (key in object!) { delete object![key]; } }
    |                                               ^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | function f(object: object, key: string) { delete object![key]; }

`;

exports[`no-useless-delete-check > invalid(21): function f(object: object, key: string) { if (key in (object as object)) { delete (object as object)[key]; } } 1`] = `

  1 | function f(object: object, key: string) { if (key in (object as object)) { delete (object as object)[key]; } }

`;

exports[`no-useless-delete-check > invalid(21): function f(object: object, key: string) { if (key in (object as object)) { delete (object as object)[key]; } } 2`] = `

Message:
> 1 | function f(object: object, key: string) { if (key in (object as object)) { delete (object as object)[key]; } }
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | function f(object: object, key: string) { delete (object as object)[key]; }

`;

exports[`no-useless-delete-check > invalid(22): function f(object: new () => object, key: string) { if (key in object) { delete object[key]; } } 1`] = `

  1 | function f(object: new () => object, key: string) { if (key in object) { delete object[key]; } }

`;

exports[`no-useless-delete-check > invalid(22): function f(object: new () => object, key: string) { if (key in object) { delete object[key]; } } 2`] = `

Message:
> 1 | function f(object: new () => object, key: string) { if (key in object) { delete object[key]; } }
    |                                                         ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | function f(object: new () => object, key: string) { delete object[key]; }

`;

exports[`no-useless-delete-check > invalid(23): function f(object: object | (() => void), key: string) { if (key in object) { delete object[key]; } } 1`] = `

  1 | function f(object: object | (() => void), key: string) { if (key in object) { delete object[key]; } }

`;

exports[`no-useless-delete-check > invalid(23): function f(object: object | (() => void), key: string) { if (key in object) { delete object[key]; } } 2`] = `

Message:
> 1 | function f(object: object | (() => void), key: string) { if (key in object) { delete object[key]; } }
    |                                                              ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | function f(object: object | (() => void), key: string) { delete object[key]; }

`;

exports[`no-useless-delete-check > invalid(24): const map = new Map(); if (map.has(key)) { map.delete(key); } 1`] = `

  1 | const map = new Map(); if (map.has(key)) { map.delete(key); }

`;

exports[`no-useless-delete-check > invalid(24): const map = new Map(); if (map.has(key)) { map.delete(key); } 2`] = `

Message:
> 1 | const map = new Map(); if (map.has(key)) { map.delete(key); }
    |                            ^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map(); map.delete(key);

`;

exports[`no-useless-delete-check > invalid(25): const map = new Map(); if (map.has(key)) map.delete(key); 1`] = `

  1 | const map = new Map(); if (map.has(key)) map.delete(key);

`;

exports[`no-useless-delete-check > invalid(25): const map = new Map(); if (map.has(key)) map.delete(key); 2`] = `

Message:
> 1 | const map = new Map(); if (map.has(key)) map.delete(key);
    |                            ^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map(); map.delete(key);

`;

exports[`no-useless-delete-check > invalid(26): const map = new Map(); if (map.has(\"key\")) { map.delete(\"key\"); } 1`] = `

  1 | const map = new Map(); if (map.has("key")) { map.delete("key"); }

`;

exports[`no-useless-delete-check > invalid(26): const map = new Map(); if (map.has(\"key\")) { map.delete(\"key\"); } 2`] = `

Message:
> 1 | const map = new Map(); if (map.has("key")) { map.delete("key"); }
    |                            ^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map(); map.delete("key");

`;

exports[`no-useless-delete-check > invalid(27): const map = new Map(); if (map.has(1)) { map.delete(1); } 1`] = `

  1 | const map = new Map(); if (map.has(1)) { map.delete(1); }

`;

exports[`no-useless-delete-check > invalid(27): const map = new Map(); if (map.has(1)) { map.delete(1); } 2`] = `

Message:
> 1 | const map = new Map(); if (map.has(1)) { map.delete(1); }
    |                            ^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map(); map.delete(1);

`;

exports[`no-useless-delete-check > invalid(28): const set = new Set(); if (set.has(value)) { set.delete(value); } 1`] = `

  1 | const set = new Set(); if (set.has(value)) { set.delete(value); }

`;

exports[`no-useless-delete-check > invalid(28): const set = new Set(); if (set.has(value)) { set.delete(value); } 2`] = `

Message:
> 1 | const set = new Set(); if (set.has(value)) { set.delete(value); }
    |                            ^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const set = new Set(); set.delete(value);

`;

exports[`no-useless-delete-check > invalid(29): const weakMap = new WeakMap(); if (weakMap.has(key)) { weakMap.delete(key); } 1`] = `

  1 | const weakMap = new WeakMap(); if (weakMap.has(key)) { weakMap.delete(key); }

`;

exports[`no-useless-delete-check > invalid(29): const weakMap = new WeakMap(); if (weakMap.has(key)) { weakMap.delete(key); } 2`] = `

Message:
> 1 | const weakMap = new WeakMap(); if (weakMap.has(key)) { weakMap.delete(key); }
    |                                    ^^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const weakMap = new WeakMap(); weakMap.delete(key);

`;

exports[`no-useless-delete-check > invalid(3): const object = {}; if (\"key\" in object) { delete object.key; } 1`] = `

  1 | const object = {}; if ("key" in object) { delete object.key; }

`;

exports[`no-useless-delete-check > invalid(3): const object = {}; if (\"key\" in object) { delete object.key; } 2`] = `

Message:
> 1 | const object = {}; if ("key" in object) { delete object.key; }
    |                        ^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object.key;

`;

exports[`no-useless-delete-check > invalid(30): const weakSet = new WeakSet(); if (weakSet.has(value)) { weakSet.delete(value); } 1`] = `

  1 | const weakSet = new WeakSet(); if (weakSet.has(value)) { weakSet.delete(value); }

`;

exports[`no-useless-delete-check > invalid(30): const weakSet = new WeakSet(); if (weakSet.has(value)) { weakSet.delete(value); } 2`] = `

Message:
> 1 | const weakSet = new WeakSet(); if (weakSet.has(value)) { weakSet.delete(value); }
    |                                    ^^^^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const weakSet = new WeakSet(); weakSet.delete(value);

`;

exports[`no-useless-delete-check > invalid(31): const map = new Map(); if ((map).has((key))) { (map).delete((key)); } 1`] = `

  1 | const map = new Map(); if ((map).has((key))) { (map).delete((key)); }

`;

exports[`no-useless-delete-check > invalid(31): const map = new Map(); if ((map).has((key))) { (map).delete((key)); } 2`] = `

Message:
> 1 | const map = new Map(); if ((map).has((key))) { (map).delete((key)); }
    |                            ^^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map(); (map).delete((key));

`;

exports[`no-useless-delete-check > invalid(32): const map = new Map(); if (map.has(key as string)) { map.delete(key as string); } 1`] = `

  1 | const map = new Map(); if (map.has(key as string)) { map.delete(key as string); }

`;

exports[`no-useless-delete-check > invalid(32): const map = new Map(); if (map.has(key as string)) { map.delete(key as string); } 2`] = `

Message:
> 1 | const map = new Map(); if (map.has(key as string)) { map.delete(key as string); }
    |                            ^^^^^^^^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map(); map.delete(key as string);

`;

exports[`no-useless-delete-check > invalid(33): const map = new Map() as Map<string, number>; if (map.has(key)) { map.delete(key); } 1`] = `

  1 | const map = new Map() as Map<string, number>; if (map.has(key)) { map.delete(key); }

`;

exports[`no-useless-delete-check > invalid(33): const map = new Map() as Map<string, number>; if (map.has(key)) { map.delete(key); } 2`] = `

Message:
> 1 | const map = new Map() as Map<string, number>; if (map.has(key)) { map.delete(key); }
    |                                                   ^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map() as Map<string, number>; map.delete(key);

`;

exports[`no-useless-delete-check > invalid(34): const map = new Map() satisfies Map<string, number>; if (map.has(key)) { map.delete(key); } 1`] = `

  1 | const map = new Map() satisfies Map<string, number>; if (map.has(key)) { map.delete(key); }

`;

exports[`no-useless-delete-check > invalid(34): const map = new Map() satisfies Map<string, number>; if (map.has(key)) { map.delete(key); } 2`] = `

Message:
> 1 | const map = new Map() satisfies Map<string, number>; if (map.has(key)) { map.delete(key); }
    |                                                          ^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Output:
  1 | const map = new Map() satisfies Map<string, number>; map.delete(key);

`;

exports[`no-useless-delete-check > invalid(35): const map = new Map();\nif (map.has(key)) {\n\tmap.delete(key);\n} 1`] = `

  1 | const map = new Map();
  2 | if (map.has(key)) {
  3 | 	map.delete(key);
  4 | }

`;

exports[`no-useless-delete-check > invalid(35): const map = new Map();\nif (map.has(key)) {\n\tmap.delete(key);\n} 2`] = `

Message:
  1 | const map = new Map();
> 2 | if (map.has(key)) {
    |     ^^^^^^^^^^^^ The existence check before deletion is unnecessary.
  3 | 	map.delete(key);
  4 | }

Output:
  1 | const map = new Map();
  2 | map.delete(key);

`;

exports[`no-useless-delete-check > invalid(36): const map = new Map();\nif (/* comment */ map.has(key)) {\n\tmap.delete(key);\n} 1`] = `

  1 | const map = new Map();
  2 | if (/* comment */ map.has(key)) {
  3 | 	map.delete(key);
  4 | }

`;

exports[`no-useless-delete-check > invalid(36): const map = new Map();\nif (/* comment */ map.has(key)) {\n\tmap.delete(key);\n} 2`] = `

Message:
  1 | const map = new Map();
> 2 | if (/* comment */ map.has(key)) {
    |                   ^^^^^^^^^^^^ The existence check before deletion is unnecessary.
  3 | 	map.delete(key);
  4 | }

`;

exports[`no-useless-delete-check > invalid(37): const map = new Map();\nif (map.has(key)) {\n\t// Keep this comment.\n\tmap.delete(key);\n} 1`] = `

  1 | const map = new Map();
  2 | if (map.has(key)) {
  3 | 	// Keep this comment.
  4 | 	map.delete(key);
  5 | }

`;

exports[`no-useless-delete-check > invalid(37): const map = new Map();\nif (map.has(key)) {\n\t// Keep this comment.\n\tmap.delete(key);\n} 2`] = `

Message:
  1 | const map = new Map();
> 2 | if (map.has(key)) {
    |     ^^^^^^^^^^^^ The existence check before deletion is unnecessary.
  3 | 	// Keep this comment.
  4 | 	map.delete(key);
  5 | }

`;

exports[`no-useless-delete-check > invalid(38): const map = new Map();\nif (map.has(key)) {\n\tmap.delete(key)\n}\n(function () {})(); 1`] = `

  1 | const map = new Map();
  2 | if (map.has(key)) {
  3 | 	map.delete(key)
  4 | }
  5 | (function () {})();

`;

exports[`no-useless-delete-check > invalid(38): const map = new Map();\nif (map.has(key)) {\n\tmap.delete(key)\n}\n(function () {})(); 2`] = `

Message:
  1 | const map = new Map();
> 2 | if (map.has(key)) {
    |     ^^^^^^^^^^^^ The existence check before deletion is unnecessary.
  3 | 	map.delete(key)
  4 | }
  5 | (function () {})();

Output:
  1 | const map = new Map();
  2 | map.delete(key);
  3 | (function () {})();

`;

exports[`no-useless-delete-check > invalid(39): const map = new Map()\nif ((map).has(key)) {\n\t(map).delete(key);\n} 1`] = `

  1 | const map = new Map()
  2 | if ((map).has(key)) {
  3 | 	(map).delete(key);
  4 | }

`;

exports[`no-useless-delete-check > invalid(39): const map = new Map()\nif ((map).has(key)) {\n\t(map).delete(key);\n} 2`] = `

Message:
  1 | const map = new Map()
> 2 | if ((map).has(key)) {
    |     ^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.
  3 | 	(map).delete(key);
  4 | }

Output:
  1 | const map = new Map()
  2 | ;(map).delete(key);

`;

exports[`no-useless-delete-check > invalid(4): const object = {}; if (\"key\" in object) { delete object[\"key\"]; } 1`] = `

  1 | const object = {}; if ("key" in object) { delete object["key"]; }

`;

exports[`no-useless-delete-check > invalid(4): const object = {}; if (\"key\" in object) { delete object[\"key\"]; } 2`] = `

Message:
> 1 | const object = {}; if ("key" in object) { delete object["key"]; }
    |                        ^^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object["key"];

`;

exports[`no-useless-delete-check > invalid(5): const object = {}; if (\"ab\" in object) { delete object[\"a\" + \"b\"]; } 1`] = `

  1 | const object = {}; if ("ab" in object) { delete object["a" + "b"]; }

`;

exports[`no-useless-delete-check > invalid(5): const object = {}; if (\"ab\" in object) { delete object[\"a\" + \"b\"]; } 2`] = `

Message:
> 1 | const object = {}; if ("ab" in object) { delete object["a" + "b"]; }
    |                        ^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object["a" + "b"];

`;

exports[`no-useless-delete-check > invalid(6): const object = {}; if (1 in object) { delete object[1]; } 1`] = `

  1 | const object = {}; if (1 in object) { delete object[1]; }

`;

exports[`no-useless-delete-check > invalid(6): const object = {}; if (1 in object) { delete object[1]; } 2`] = `

Message:
> 1 | const object = {}; if (1 in object) { delete object[1]; }
    |                        ^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object[1];

`;

exports[`no-useless-delete-check > invalid(7): const object = {}; if (null in object) { delete object.null; } 1`] = `

  1 | const object = {}; if (null in object) { delete object.null; }

`;

exports[`no-useless-delete-check > invalid(7): const object = {}; if (null in object) { delete object.null; } 2`] = `

Message:
> 1 | const object = {}; if (null in object) { delete object.null; }
    |                        ^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object.null;

`;

exports[`no-useless-delete-check > invalid(8): const object = {}; if (null in object) { delete object[\"null\"]; } 1`] = `

  1 | const object = {}; if (null in object) { delete object["null"]; }

`;

exports[`no-useless-delete-check > invalid(8): const object = {}; if (null in object) { delete object[\"null\"]; } 2`] = `

Message:
> 1 | const object = {}; if (null in object) { delete object["null"]; }
    |                        ^^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; delete object["null"];

`;

exports[`no-useless-delete-check > invalid(9): const object = {}; const key = String(\"key\"); if (key in object) { delete object[key]; } 1`] = `

  1 | const object = {}; const key = String("key"); if (key in object) { delete object[key]; }

`;

exports[`no-useless-delete-check > invalid(9): const object = {}; const key = String(\"key\"); if (key in object) { delete object[key]; } 2`] = `

Message:
> 1 | const object = {}; const key = String("key"); if (key in object) { delete object[key]; }
    |                                                   ^^^^^^^^^^^^^ The existence check before deletion is unnecessary.

Suggestion 1/1: Remove the existence check.:
  1 | const object = {}; const key = String("key"); delete object[key];

`;
